# brandi

./: .dockerignore  .gitignore  Dockerfile  README.org  brandi.asd  brandi.cabal  docker.nix  hakyll.patch  release.nix  scratch.lisp  sql-playground.org  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
nix/: sources.json
sql/migrations/: 20230101113037-github_activity.down.sql  20230101113037-github_activity.up.sql
src/: Brandi.hs  db.lisp  package.lisp  web.lisp
src/services/: github.lisp
src/spa/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
src/spa/src/: config.ts  index.html  index.tsx  store.ts  types.ts
src/spa/src/components/GithubEvent/: DeleteEvent.tsx  GenericEvent.tsx  index.tsx  styles.module.scss  styles.module.scss.d.ts  utils.ts
src/spa/src/services/: vocab.ts
src/spa/src/views/Home/: index.tsx  styles.module.scss  styles.module.scss.d.ts
